<resources>
    <string name="app_name">ZUNI</string>
    <string name="vpa">VPA</string>
    <string name="loginpage">Loginpage</string>
    <string name="UsernameorPhoneNumber">Username/PhoneNumber:</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="ZUNI" />
    <string name="password">Password:</string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="create">Create</string>
    <string name="back_to_home">Back to Home</string>
    <string name="enter_email">Enter Email....</string>
    <string name="enter_password">Enter Password....</string>
    <string name="back_to_login">Back to login</string>
    <string name="title_activity_chatbot">chatbot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_chatbot2">chatbot2</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_chat">chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="press_mic_button">Press mic Button.....</string>
    <string name="welcome_to_zuni">Welcome to ZUNI</string>
</resources>