<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">


    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minWidth="25dp"
        android:minHeight="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:context=".login">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/u_ip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/p_ip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/underpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Login"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="382dp"
        android:layout_height="276dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

</androidx.constraintlayout.widget.ConstraintLayout>